# asl-signs-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  description_st_b_st.txt  pyproject.toml
